--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,6 +12,7 @@
   <script src="lib/jasmine-3.5.0/boot.js"></script>
 
   <!-- include source files here... -->
+  <script src="src/Weather.js"></script>
   <script src="src/Plane.js"></script>
   <script src="src/Airport.js"></script>
 
@@ -19,6 +20,7 @@
   <script src="spec/SpecHelper.js"></script>
   <script src="spec/AirportSpec.js"></script>
   <script src="spec/PlaneSpec.js"></script>
+  <script src="spec/WeatherSpec.js"></script>
 
 </head>
 
